--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.profiles.include=jwt
+
+spring.data.web.pageable.default-page-size=8
+spring.data.web.pageable.one-indexed-parameters=true
